--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,6 @@
             <version>5.6.9.Final</version>
         </dependency>
 
-
-
-
         <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
@@ -66,15 +63,15 @@
             <version>8.0.29</version>
         </dependency>
 
-
-
-
-
-
+        <!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>3.1.0</version>
+        </dependency>
 
 
     </dependencies>
-
 
 
 </project>
