--- a/front-end/package.json
+++ b/front-end/package.json
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "csstype": "^3.1.0"
   }
 }
