--- a/front-end/package.json
+++ b/front-end/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@mui/material": "^5.9.2",
-    "csstype": "^3.1.0"
+    "csstype": "^3.1.0",
+    "reactstrap": "^9.1.2"
   }
 }
